# sonus

./: .gitignore  DEVELOPMENT.md  README.md  admins.txt  config.yaml.example  pyproject.toml  scan_music.py
apache/: DEPLOYMENT.md  sonus.conf
scripts/: scan-library.sh  setup-data-dir.sh
sonus/: __init__.py  admins.py  audio_meta.py  auth.py  cli.py  config.py  console.py  database.py  fetch_art.py  file_hash.py  filename_meta.py  identify.py  models.py  scanner.py  title_cleanup.py  transcode.py  users.py
sonus/cgi/: __init__.py  common.py  form.py  render.py  track_page.py
sonus/schema/: 001_initial.sql  002_playlists.sql  003_users.sql  004_scale.sql  005_drop_fts.sql
tests/: test_admins.py  test_cgi_form.py  test_console.py  test_fetch_art.py  test_identify.py  test_library_nav.py  test_playlists.py  test_scan_music.py  test_scanner.py  test_search.py  test_title_cleanup.py  test_transcode.py
web/cgi-bin/: admin_mode.py  art.py  fetch_art.py  identify_track.py  index.py  login.py  logout.py  playlist_edit.py  playlists.py  register.py  stream.py  track.py  track_edit.py  upload_art.py
web/static/: library.js  player.js  style.css
