[project]
name = "sonus"
version = "0.1.0"
description = "Scan music directories and browse your collection via a web UI"
readme = "README.md"
license = "BlueOak-1.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "mutagen>=1.47",
]

[project.scripts]
sonus = "sonus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sonus"]
